# deepin-term-agent

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup_llm.py
src/: main.py
src/deepin_term_agent/: __init__.py  main.py
src/deepin_term_agent/agent/: agent.py
src/deepin_term_agent/cli/: interactive.py
src/deepin_term_agent/config/: manager.py
src/deepin_term_agent/llm/: client.py
src/deepin_term_agent/mcp/: client.py
src/deepin_term_agent/tools/: builtin.py
src/deepin_term_agent/tui/: app.py
tests/: test_builtin_tools.py
