[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepin-term-agent"
version = "0.1.0"
description = "AI terminal agent with TUI interface using MCP protocol"
authors = [{name = "Deepin Terminal Agent Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "textual>=0.44.0",
    "rich>=13.0.0",
    "websockets>=11.0.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "aiofiles>=23.0.0",
    "httpx>=0.24.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "ruff>=0.0.200",
]

[project.scripts]
term-agent = "deepin_term_agent.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true